# Mash3_Template

./: CMakeLists.txt  README.md  main.cpp  makefile
SOIL/projects/makefile/: makefile
SOIL/src/: SOIL.c
Utility/: makefile
Utility/include/: GL.h  Overall.h  Utility.h
Utility/include/GL/: Camera.h  ShaderProgram.h  Texture.h
Utility/include/VM/: mat4.h  uvec3.h  vec2.h  vec3.h  vec4.h
Utility/src/: Camera.cpp  GL.cpp  Overall.cpp  ShaderProgram.cpp  Texture.cpp  mat4.cpp  uvec3.cpp  vec2.cpp  vec3.cpp  vec4.cpp
include/: empty.h
source/: main.cpp
